# IgniteView

./: .gitignore  LICENSE  Photino.Native.dylib  README.md
.github/workflows/: desktop-native-ci.yml
Docs/: docusaurus.config.js  package-lock.json  package.json
IgniteView.Core/: IgniteView.Core.csproj  IgniteView.Core.sln  README.md
IgniteView.Core/BuiltIns/: DynamicRoutes.cs  InteropCommands.cs  LocalStorage.cs  SharedContext.cs  SystemStyling.cs  WindowCommands.cs
IgniteView.Core/Managers/: AppManager.cs  CommandManager.cs  IconManager.cs  PlatformManager.cs  ScriptManager.cs  ServerManager.cs  ViteAppManager.cs
IgniteView.Core/Types/: AppIdentity.cs  ChildProcessTracker.cs  CommandAttribute.cs  CommandData.cs  DarkModeStyleRule.cs  DebugMode.cs  DirectoryFileResolver.cs  FileResolver.cs  InjectedScript.cs  JSAssignment.cs  JSBlob.cs  JSFunction.cs  JSFunctionCall.cs  JSLiteral.cs  JavaScriptConverter.cs  LockedWindowBounds.cs  PersistentStorage.cs  RoutingUtilities.cs  ScriptInjectionMode.cs  ServerListenMode.cs  StyleRule.cs  TarFileResolver.cs  TarStream.cs  WWWRootFileResolver.cs  WebWindow.cs  WindowBounds.cs
IgniteView.Core/iv2runtime/: IgniteView.Core.igniteview
IgniteView.Core/src-vite/: core.html  package-lock.json  package.json  tsconfig.json  vite.config.js
IgniteView.Core/wwwroot/: igniteview.html
IgniteView.Desktop/: IgniteView.Desktop.csproj  README.md
IgniteView.Desktop.Native/: .gitignore  CMakeLists.txt  MacHelper.h  MacHelper.mm  Main.cpp
IgniteView.Desktop.Native/cmake/: patch_saucer_qt_cookies.cmake
IgniteView.Desktop/Managers/: DesktopPlatformManager.cs
IgniteView.Desktop/Types/: DesktopWebWindow.cs  InteropHelper.cs  MacWebWindow.cs  Win32Helper.cs  Win32WebWindow.cs
IgniteView.Documentation/: docusaurus.config.js  package.json
IgniteView.Example.Desktop/: IgniteView.Example.Desktop.csproj  IgniteView.Example.Desktop.sln  Program.cs  TestCommands.cs
IgniteView.Example.Desktop/iv2runtime/: IgniteView.Example.Desktop.igniteview  main.igniteview
IgniteView.Example.Desktop/src-vite/: index.html  package-lock.json  package.json
IgniteView.Example.Desktop/wwwroot/: index.html
IgniteView.Example.UWP/: App.xaml  App.xaml.cs  IgniteView.Example.UWP.csproj  IgniteView.Example.UWP.sln  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  src-vite
IgniteView.Example.UWP/Properties/: launchSettings.json
IgniteView.Example.UWP/iv2runtime/: IgniteView.Example.UWP.igniteview  main.igniteview
IgniteView.Example.UWP/src-vite/: package-lock.json
IgniteView.FileDialogs/: FileDialog.cs  FileDialogResult.cs  FileFilter.cs  Helpers.cs  IgniteView.FileDialogs.csproj  IgniteView.FileDialogs.sln  ImportResolver.cs  LICENSE  NFDPathSet.cs  NFDResult.cs  NativeFunctions.cs  README.md
IgniteView.FileDialogs/Desktop/: DesktopDialogHandler.cs  LICENSE  NFDBindings.cs  NFDFilter.cs  NFDFilterN.cs  NFDFilterU8.cs  NFDImportResolver.cs  NFDMethods.cs  NFDResult.cs
IgniteView.FileDialogs/Types/: FileDialog.cs  FileFilter.cs  Helpers.cs  IDialogHandler.cs
IgniteView.FileDialogs/iv2runtime/: IgniteView.FileDialogs.igniteview
IgniteView.FileDialogs/src-vite/: package-lock.json  package.json  vite.config.js
IgniteView.InjectedScript/: 0_Main.js  1_CommandBridge.js  2_Polyfills.js  3_WindowDragging.js  InjectedScript.cs  README.md  build.py
IgniteView.ProjectTemplate/IgniteView.Templates/: IgniteView.Templates.csproj  LICENSE  README.md
IgniteView.Scripts/: CreateViteProject.js  Postbuild.js  Prebuild.js  QuickStart.js
IgniteView.UWP/: IgniteView.UWP.csproj  IgniteViewPage.xaml  IgniteViewPage.xaml.cs  UWPAppManager.cs  UWPFileResolver.cs  UWPPersistentStorage.cs  UWPPlatformManager.cs  UWPWebWindow.cs
IgniteView.UWP/Integrations/: UWPDialogHandler.cs  UWPPersistentStorage.cs
IgniteView.UWP/iv2runtime/: uwp.igniteview
MacHelper/IgniteViewMac/: FilePopups.h  IgniteViewMac.h  IgniteViewMac.mm  WindowManagement.h
MacHelper/IgniteViewMac.xcodeproj/: project.pbxproj
NativeCode/Photino.Native/: Exports.cpp  Photino.Mac.AppDelegate.mm  Photino.Mac.mm  Photino.Windows.cpp  Photino.h
WebFramework/: InteropLibrary.js  WebFramework.csproj  WebFramework.sln
WebFramework.MAUI/: MAUIHelper.cs  MAUIWebWindow.cs  MAUIWindowProvider.cs  WebFramework.MAUI.csproj  WebFrameworkPage.cs
WebFramework.PT/: MacHelper.cs  PTWebWindow.cs  PTWindowProvider.cs  WebFramework.PT.csproj  WinHelper.cs  WindowsIconConverter.cs
WebFramework.PT/PT/: PhotinoDialogEnums.cs  PhotinoNativeParameters.cs  PhotinoWindow.NET.cs
WebFramework.Test/: Program.cs  TestScript.cs  WebFramework.Test.csproj  build-linux.cmd
WebFramework.Test.MAUI/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MauiProgram.cs  WebFramework.Test.MAUI.csproj
WebFramework.Test.PT/: Program.cs  WebFramework.Test.PT.csproj
WebFramework.Test.UWP/: App.xaml  App.xaml.cs  Package.appxmanifest  WebFramework.Test.UWP.csproj
WebFramework.Test.UWP/Properties/: AssemblyInfo.cs
WebFramework.Test/WWW/: index.html  style.css
WebFramework.UWP/: UWPHelper.cs  UWPPlatformIOFile.cs  UWPWebWindow.cs  UWPWindowProvider.cs  WebFramework.UWP.csproj  WebFrameworkPage.xaml  WebFrameworkPage.xaml.cs
docs/: 404.html  index.html  sitemap.xml
(+208 files in other folders)
